# portfolio-website-chatbot

./: README.md
backend/: pyproject.toml
backend/backend/: app.py
backend/backend/brain/: agent.py
backend/backend/brain/chroma_db/: chroma.sqlite3
backend/backend/brain/storage/: default__vector_store.json  docstore.json  index_store.json
backend/backend/brain/tools/: github_search_tool.py
